5sem/IFJ/test/tests/lexer/errors/test_invalid_number_format.wren
// Test: Invalid number format
// Expected: Lexical error (exit code 1)
// Reason: Multiple decimal points

import "ifj25" for Ifj

class Program {
    static main() {
        var num
        num = 10.5.3
        __dummy = Ifj.write(num)
    }
}

